test msprime on yum distros; refactor away yum-pip* tests

--- a/polydistro/distros/fedora-31/test-settings.env
+++ b/polydistro/distros/fedora-31/test-settings.env
@@ -1,2 +1,3 @@
 IMAGE=registry.fedoraproject.org/fedora:31
-TESTS=(miniconda yum-conda yum-pip yum-pip-pre)
+TAXON=yum
+TESTS=(miniconda yum-conda pip pip-pre)
