--- a/polydistro/distros/fedora-32/test-settings.env
+++ b/polydistro/distros/fedora-32/test-settings.env
@@ -1,3 +1,3 @@
 IMAGE=registry.fedoraproject.org/fedora:32
 TAXON=yum
-TESTS=(miniconda yum-conda pip pip-pre)
+TESTS=(miniconda sys-conda pip pip-pre)
