--- a/polydistro/distros/fedora-31/test-settings.env
+++ b/polydistro/distros/fedora-31/test-settings.env
@@ -1,3 +1,3 @@
 IMAGE=registry.fedoraproject.org/fedora:31
 TAXON=yum
-TESTS=(miniconda sys-conda pip pip-pre)
+TESTS=(miniconda sys-conda pip pip-pre min-pip)
