Updates to Fedora Dockerfile:
* remove sha256 -- they appear to not be persistent
  and dnf install will update first anyways!
* Install valgrind and gdb
* Update README

--- a/fedora_dev/Dockerfile
+++ b/fedora_dev/Dockerfile
@@ -1,6 +1,6 @@
 # NOTE: sha256 tags only seem to work when pulling from quay.io.
 # Trying to pull from docker.io gets you a "manifest not known"
-FROM quay.io/fedora/fedora@sha256:ce08a91085403ecbc637eb2a96bd3554d75537871a12a14030b89243501050f2
+FROM quay.io/fedora/fedora
 
 WORKDIR /bootstrap
 
@@ -15,6 +15,8 @@ RUN dnf install -y gcc g++ meson python3.10 python3.10-devel \
   meson \
   pkgconfig \
   curl \
+  valgrind \
+  gdb \
   # Convenience follows:
   zsh \
   neovim \
